--- a/.github/workflows/auctionroommanager-deployment.yml
+++ b/.github/workflows/auctionroommanager-deployment.yml
@@ -59,9 +59,9 @@ jobs:
           --tag "gcr.io/$PROJECT_ID/$IMAGE:1.0" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
+          --build-arg redis_cluster_url=redis-cluster-redis-ha.default.svc.cluster.local \
           ./backend/auctionroommanager
         docker push "gcr.io/$PROJECT_ID/$IMAGE:1.0"
-
     # Set up kustomize
     - name: Set up Kustomize
       run: |-
