--- a/backend/auctionroommanager/Dockerfile
+++ b/backend/auctionroommanager/Dockerfile
@@ -5,6 +5,12 @@ FROM node:14
 # Create app directory
 WORKDIR /usr/src/app
 
+# args
+
+ARG redis_cluster_url
+ENV redis_cluster_url $redis_cluster_url
+
+
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
