--- a/backend/auctionroommanager/Dockerfile
+++ b/backend/auctionroommanager/Dockerfile
@@ -10,6 +10,8 @@ WORKDIR /usr/src/app
 ARG redis_cluster_url
 ENV redis_cluster_url $redis_cluster_url
 
+ARG redis_follower_url
+ENV redis_follower_url $redis_follower_url
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
