--- a/.github/workflows/redis-deployment.yml
+++ b/.github/workflows/redis-deployment.yml
@@ -10,7 +10,7 @@
 #
 # For more support on how to run the workflow, please visit https://github.com/google-github-actions/setup-gcloud/tree/master/example-workflows/gke
 
-name: Build and Deploy auctionroommanager
+name: Deploy redis cluster
 
 on:
   push:
@@ -21,8 +21,7 @@ env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT }}
   GKE_CLUSTER: cluster-1    # TODO: update to cluster name
   GKE_ZONE: asia-southeast1-a  # TODO: update to cluster zone
-  DEPLOYMENT_NAME: auctionroommanager # TODO: update to deployment name
-  IMAGE: auctionbackend-auctionroommanager
+  DEPLOYMENT_NAME: primary # TODO: update to deployment name
 
 jobs:
   setup-build-publish-deploy:
@@ -52,25 +51,8 @@ jobs:
         location: asia-southeast1-a
         credentials: ${{ secrets.GCP_SA_KEY }}
 
-    # Build the Docker image
-    - name: Build
-      run: |-
-        docker build \
-          --tag "gcr.io/$PROJECT_ID/$IMAGE:1.0" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
-          --build-arg redis_cluster_url=primary.default.svc.cluster.local \
-          ./backend/auctionroommanager
-        docker push "gcr.io/$PROJECT_ID/$IMAGE:1.0"
-    # Set up kustomize
-    - name: Set up Kustomize
-      run: |-
-        curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-        chmod u+x ./kustomize
-
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        kubectl apply -f ./k8deployment/services/4-auctionroommanager.yaml
-        kubectl rollout status deployment/$DEPLOYMENT_NAME
+        kubectl apply -f ./k8deployment/services/7-redis-cluster.yaml
         kubectl get services -o wide
