Update tag to latest

--- a/k8deployment/services/4-auctionroommanager.yaml
+++ b/k8deployment/services/4-auctionroommanager.yaml
@@ -16,7 +16,7 @@ spec:
         app: auctionroommanager
     spec:
       containers:
-          - image: gcr.io/graphical-mile-329010/auctionbackend-auctionroommanager:1.0
+          - image: gcr.io/graphical-mile-329010/auctionbackend-auctionroommanager:latest
             name: auctionbackend-auctionroommanager
             ports:
             - containerPort: 9000
