--- a/.github/workflows/auctionroom-deployment.yml
+++ b/.github/workflows/auctionroom-deployment.yml
@@ -1,76 +1,70 @@
 # This workflow will build a docker container, publish it to Google Container Registry, and deploy it to GKE when there is a push to the main branch.
-#
+
 # To configure this workflow:
-#
+
 # 1. Ensure that your repository contains the necessary configuration for your Google Kubernetes Engine cluster, including deployment.yml, kustomization.yml, service.yml, etc.
-#
+
 # 2. Set up secrets in your workspace: GKE_PROJECT with the name of the project and GKE_SA_KEY with the Base64 encoded JSON service account key (https://github.com/GoogleCloudPlatform/github-actions/tree/docs/service-account-key/setup-gcloud#inputs).
-#
+
 # 3. Change the values for the GKE_ZONE, GKE_CLUSTER, IMAGE, and DEPLOYMENT_NAME environment variables (below).
-#
+
 # For more support on how to run the workflow, please visit https://github.com/google-github-actions/setup-gcloud/tree/master/example-workflows/gke
 
-# name: Build and Deploy auctionroom
+name: Build and Deploy auctionroom
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# env:
-#   PROJECT_ID: ${{ secrets.GCP_PROJECT }}
-#   GKE_CLUSTER: cluster-1    # TODO: update to cluster name
-#   GKE_ZONE: asia-southeast1-a  # TODO: update to cluster zone
-#   DEPLOYMENT_NAME: auctionroom # TODO: update to deployment name
-#   IMAGE: auctionbackend-auctionroom
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT }}
+  GKE_CLUSTER: cluster-1    # TODO: update to cluster name
+  GKE_ZONE: asia-southeast1-a  # TODO: update to cluster zone
+  DEPLOYMENT_NAME: auctionroom # TODO: update to deployment name
+  IMAGE: auctionbackend-auctionroom
 
-# jobs:
-#   setup-build-publish-deploy:
-#     name: Setup, Build, Publish, and Deploy
-#     runs-on: ubuntu-latest
-#     environment: production
+jobs:
+  setup-build-publish-deploy:
+    name: Setup, Build, Publish, and Deploy
+    runs-on: ubuntu-latest
+    environment: production
 
-#     steps:
-#     - name: Checkout
-#       uses: actions/checkout@v2
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
 
-#     # Setup gcloud CLI
-#     - uses: google-github-actions/setup-gcloud@v0.2.0
-#       with:
-#         service_account_key: ${{ secrets.GCP_SA_KEY }}
-#         project_id: ${{ secrets.GKE_PROJECT }}
+    # Setup gcloud CLI
+    - uses: google-github-actions/setup-gcloud@v0.2.0
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        project_id: ${{ secrets.GKE_PROJECT }}
 
-#     # Configure Docker to use the gcloud command-line tool as a credential
-#     # helper for authentication
-#     - run: |-
-#         gcloud --quiet auth configure-docker
+    # Configure Docker to use the gcloud command-line tool as a credential
+    # helper for authentication
+    - run: |-
+        gcloud --quiet auth configure-docker
 
-#     # Get the GKE credentials so we can deploy to the cluster
-#     - uses: google-github-actions/get-gke-credentials@v0.2.1
-#       with:
-#         cluster_name: cluster-1
-#         location: asia-southeast1-a
-#         credentials: ${{ secrets.GCP_SA_KEY }}
+    # Get the GKE credentials so we can deploy to the cluster
+    - uses: google-github-actions/get-gke-credentials@v0.2.1
+      with:
+        cluster_name: cluster-1
+        location: asia-southeast1-a
+        credentials: ${{ secrets.GCP_SA_KEY }}
 
-#     # Build the Docker image
-#     - name: Build
-#       run: |-
-#         docker build \
-#           --tag "gcr.io/$PROJECT_ID/$IMAGE:1.0" \
-#           --build-arg GITHUB_SHA="$GITHUB_SHA" \
-#           --build-arg GITHUB_REF="$GITHUB_REF" \
-#           ./backend/auctionroom
-#         docker push "gcr.io/$PROJECT_ID/$IMAGE:1.0"
+    # Build and push the Docker image
+    - name: Build
+      run: |-
+        docker build \
+          --tag "gcr.io/$PROJECT_ID/$IMAGE:1.0" \
+          --build-arg GITHUB_SHA="$GITHUB_SHA" \
+          --build-arg GITHUB_REF="$GITHUB_REF" \
+          ./backend/auctionroom
+        docker push "gcr.io/$PROJECT_ID/$IMAGE:1.0"
 
-#     # Set up kustomize
-#     - name: Set up Kustomize
-#       run: |-
-#         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-#         chmod u+x ./kustomize
-
-#     # Deploy the Docker image to the GKE cluster
-#     - name: Deploy
-#       run: |-
-#         kubectl apply -f ./k8deployment/services/9-auctionroom.yaml
-#         kubectl rollout status deployment/$DEPLOYMENT_NAME
-#         kubectl get services -o wide
+    # Deploy the Docker image to the GKE cluster
+    - name: Deploy
+      run: |-
+        kubectl apply -f ./k8deployment/services/9-auctionroom.yaml
+        kubectl rollout status deployment/$DEPLOYMENT_NAME
+        kubectl get services -o wide
