--- a/k8deployment/services/5-auctiondetails.yaml
+++ b/k8deployment/services/5-auctiondetails.yaml
@@ -22,6 +22,7 @@ spec:
           - name: backend
             value: mongodb://mongodb:27017/auctiondetails
           image: gcr.io/graphical-mile-329010/auctionbackend-auctiondetails:1.0
+          imagePullPolicy: Always
           name: auctionbackend-auctiondetails
           ports:
           - containerPort: 8080
