--- a/k8deployment/services/6-currencymanagement.yaml
+++ b/k8deployment/services/6-currencymanagement.yaml
@@ -20,6 +20,7 @@ spec:
           - name: backend
             value: mongodb://mongodb:27017/useraccounts
           image: gcr.io/graphical-mile-329010/auctionbackend-currencymanagement:1.0
+          imagePullPolicy: Always
           name: auctionbackend-currencymanagement
           ports:
           - containerPort: 8080
