--- a/k8deployment/services/3-useraccount.yaml
+++ b/k8deployment/services/3-useraccount.yaml
@@ -20,6 +20,7 @@ spec:
           - name: backend
             value: mongodb://mongodb:27017/useraccounts
           image: gcr.io/graphical-mile-329010/auctionbackend-useraccount:1.0
+          imagePullPolicy: Always
           name: auctionbackend-useraccount
           ports:
           - containerPort: 8080
